fix: hud革新2